--- a/templates/article_admin/_form.html.twig
+++ b/templates/article_admin/_form.html.twig
@@ -2,7 +2,22 @@
     {{ form_row(articleForm.title, {
         label: 'Article title'
     }) }}
-    {{ form_row(articleForm.imageFile) }}
+
+    <div class="row">
+        <div class="col-sm-9">
+            {{ form_row(articleForm.imageFile, {
+                attr: {
+                    placeholder: 'Select an article image'
+                }
+            }) }}
+        </div>
+        <div class="col-sm-3">
+         {% if articleForm.vars.data.imageFilename|default %}
+            <img class="article-img" src="{{ uploaded_asset(articleForm.vars.data.imagePath) }}" height="100">
+         {% endif %}
+        </div>
+    </div>
+
     {{ form_row(articleForm.author) }}
     {{ form_row(articleForm.location, {
         attr: {
